<resources>
    <string name="app_name">MentorMentee</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mentormentee">MentorMentee</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="reset">Reset</string>
    <string name="register">New Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="registerstudent">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="teacher_details">Teacher Details</string>
    <string name="qualification">qualification</string>
    <string name="post">Post</string>
    <string name="gender">Gender</string>
    <string name="mobile_number">Mobile_number</string>
    <string name="back">Back</string>
</resources>
