<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.modern.mentormentee.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtfname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/txtlname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/txtusername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/txtpassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/txtretypepassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/re_type_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegisterStudent"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorLightGray"
        android:text="@string/registerstudent"
        android:textAllCaps="false"
        android:textColor="#fff" />
</LinearLayout>
