<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.modern.fragment.TeacherFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/teacher_details"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/txtfname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:hint="@string/first_name" />

        <EditText
            android:id="@+id/txtlname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:hint="@string/last_name" />

        <EditText
            android:id="@+id/txtpost"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:hint="@string/post" />


        <EditText
            android:id="@+id/txtmobile_no"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:hint="@string/mobile_number" />

        <EditText
            android:id="@+id/txtgender"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:hint="@string/gender" />

    </LinearLayout>

</FrameLayout>
