<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.modern.mentormentee.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/mentormentee"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtusername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/txtpassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="2.5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="2.5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="#FFF" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorLightGray"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#FFF" />
</LinearLayout>
